--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "framer-motion": "^11.5.4",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.6.2",
+    "mongoose": "^8.6.3",
     "next": "14.2.11",
+    "next-auth": "^4.24.7",
     "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
@@ -25,6 +26,8 @@
     "react-icons": "^5.3.0"
   },
   "devDependencies": {
+    "@types/node": "22.5.5",
+    "@types/react": "18.3.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.11",
     "postcss": "^8",
